Nova tela de pessoa, utilizando ReactJS

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Contatos
 APP_ENV=local
 APP_KEY=base64:UlEEiSm7UJk0klVoESrmfO9kY6O+Iy6kVIJtldXzLsw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/royalcargo/contatos/public
 
 LOG_CHANNEL=stack
 
@@ -44,3 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_KEY=599982164125202
+FACEBOOK_SECRET=6600d93cafc1f0383015a6d471d0d60b
+FACEBOOK_REDIRECT_URI=/login/facebook/callback
