--- a/.env
+++ b/.env
@@ -48,3 +48,6 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 FACEBOOK_KEY=599982164125202
 FACEBOOK_SECRET=6600d93cafc1f0383015a6d471d0d60b
 FACEBOOK_REDIRECT_URI=/login/facebook/callback
+
+RECAPTCHA_SITE_KEY=6LczhrkZAAAAAL9y51HugAd0kmauMtWfvfgV2XaW
+RECAPTCHA_SECRET_KEY=6LczhrkZAAAAAJ0QNaFVW-fHls3atPxvAn-O_yTH
